Modificando Css en CV

--- a/ProgramadorWeb/M1U2_HTML/cv.html
+++ b/ProgramadorWeb/M1U2_HTML/cv.html
@@ -12,15 +12,20 @@
 <div>
  <h1  > Hola, soy Franco Cottet</h1>
 
- <img class="foto" src="fotoPerfil.jpg" alt="Foto de Franco Cottet" width="150px">
+  <section class="principal">
 
- <div class="datosPersonales">
-  <h2>Datos Personales</h2>
-    <p>Edad: 20 años </p>
-    <p>Email: cottetfranco@gmail.com </p>
-    <p>Ciudad: Santa Fe, Argentina </p>
+     <div class="foto"> <img  src="fotoPerfil.jpg" alt="Foto de Franco Cottet" width="150px">
+    </div>
+
+
+     <div class="datosPersonales">
+      <h2>Datos Personales</h2>
+      <p>Edad: 20 años </p>
+      <p>Email: cottetfranco@gmail.com </p>
+      <p>Ciudad: Santa Fe, Argentina </p>
     
-  </div>
+     </div>
+  </section>
 
 </div>
 
